Create logout method, closes #2
